modal html + css

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </button>
                 </div>
 
-                <div class="experience-card">
+                <div  id="experienceCard" class="experience-card">
                     <div class="card-header">
                         <label>Expérience 1</label>
                         <button class="delete-exp-btn"><i class="ri-delete-bin-line"></i></button>
