filter unassigned workers and enable modal from room names

--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                 <div id="experienceCard" class="experience-card">
                     <div class="card-header">
                       
-                        <!-- <button id="edeletBtn" class="delete-exp-btn"></button> -->
                     </div>
                     
                 </div>
@@ -150,6 +149,16 @@
         </div>
     </div>
 </div>
+
+<!-- assign panel -->
+
+<div id="assignPanel" class="assign-panel hidden">
+   <h4>Select Worker</h4>
+   <div id="assignList"></div>
+
+   <button id="cancelAssign" class="cancelBtn">Cancel</button>
+</div>
+
     <script src="script.js"></script>
 </body>
 
