last version of workspace staff manager appli web

--- a/index.html
+++ b/index.html
@@ -27,34 +27,34 @@
         </div>
 
         <div class="rooms">
-            <div class="conference zone"data-zone="conference">
-                <img src="/asset/conference.png" alt="">
+            <div class="conference zone" data-zone="conference">
+                <img src="./asset/conference.png" alt="">
                 <h3> Conference Room</h3>
                 <button class="addToZone">&#43; assign an employee</button>
             </div>
 
-            <div class="reception zone" data-zone="reception">
-                <img src="/asset/reception.png" alt="">
+            <div class="reception zone zone-empty" data-zone="reception">
+                <img src="./asset/reception.png" alt="">
                 <h3>Reception</h3>
                 <button class="addToZone">&#43; assign an employee</button>
             </div>
-            <div class="serveurs zone" data-zone="serveurs">
-                <img src="/asset/servers.png" alt="">
+            <div class="serveurs zone zone-empty" data-zone="serveurs">
+                <img src="./asset/servers.png" alt="">
                 <h3> Servers Room</h3>
                 <button class="addToZone">&#43; assign an employee</button>
             </div>
-            <div class="securite zone"  data-zone="securite">
-                <img src="/asset/cctv.png" alt="">
+            <div class="securite zone zone-empty"  data-zone="securite">
+                <img src="./asset/cctv.png" alt="">
                 <h3>Security Room</h3>
                 <button class="addToZone">&#43; assign an employee</button>
             </div>
             <div class="personnel zone" data-zone="personnel">
-                <img src="/asset/staff.png" alt="">
+                <img src="./asset/staff.png" alt="">
                 <h3>Staff Room</h3>
                 <button class="addToZone">&#43; assign an employee</button>
             </div>
-            <div class="archives zone"  data-zone="archives">
-                <img src="/asset/archive.png" alt="">
+            <div class="archives zone  zone-empty"  data-zone="archives">
+                <img src="./asset/archive.png" alt="">
                 <h3>Archives Room</h3>
                 <button class="addToZone">&#43; assign an employee</button>
             </div>
@@ -73,7 +73,7 @@
 
             <div class="modal-grid">
                 <div class="form-group">
-                    <label for="fullName">Full Name :</label>
+                    <label>Full Name :</label>
                     <input id="name" class="modal-input" type="text" placeholder="Enter you name">
                 </div>
                 <div class="form-group">
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="form-group form-full-width">
-                    <label  for="photoUrl">Photo URL</label>
+                    <label>Photo URL</label>
                     <input id="url" class="modal-input" type="text" placeholder="https://example.com/photo.jpg">
                 </div>
 
@@ -126,7 +126,7 @@
 
                 <div class="modal-btn">
                     <button id="cancelBtn" class="cancelBtn" type="button">Cancel</button>
-                    <button type="submit" id="confirmBtn" class="addBtn" type="button">Confirm</button>
+                    <button type="submit" id="confirmBtn" class="addBtn">Confirm</button>
 
                 </div>
             </div>
